# searchcaie-mcp

./: .gitignore  GPT_INSTRUCTIONS.md  GPT_INSTRUCTIONS_V2.md  GPT_PROMPT_GUIDE.md  README.md  gpt_action_schema.yaml  mcp_config_example.json  mcp_server.py  pyproject.toml  server_config.json  test_mcp.py
