[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "searchcaie-mcp"
version = "0.1.0"
description = "MCP server for Search CAIE past-paper search"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastmcp>=3.0.0",
  "httpx>=0.27.0"
]

[project.scripts]
searchcaie-mcp = "mcp_server:main"

[tool.setuptools]
py-modules = ["mcp_server"]
